# spellchecker

./: Cargo.toml  Dockerfile  README.md  dictionary.txt  docker-compose.yaml  main.rs  spellcheck_parser.rs  spellchecker.rs
src/: main.rs  spellcheck_parser.rs  spellchecked.rs  spellchecker.rs
templates/: index.html
