[package]
name = "autocorrect"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = { version = "0.16.0" }
async-std = { version= "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features= ["derive"] }
log = "0.4"
env_logger ={ version = "0.11.1"}

[[bin]]
name = "autocorrect"
path = "main.rs"
