[package]
name = "autocorrect"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = { version = "0.16.0" }
async-std = { version= "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features= ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger ={ version = "0.11.1" }
tera = { version = "1.19.1"}
tide-tera = { version = "0.2.4" }
form_urlencoded = "1.2.1"
rayon ="1.8.1"

[[bin]]
name = "autocorrect"
path = "src/main.rs"
